--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
  <meta charset="utf-8">
- <litlle> Eu não sou boleira</litlle>
+ <title> Eu não sou boleira</title>
 </head>
 </html>
 <body>
