--- a/index.html
+++ b/index.html
@@ -12,3 +12,11 @@
         
 </body>
 <button class="btn-proximo" data-proximo="1">bolos</button>
+<div class="passo" id="passo-1">
+    <p>Ovos.
+        Manteiga ou margarina.
+        Farinha de trigo.
+        Leite.
+        Maizena.
+        Açúcar.
+        Fermento.</p>
