--- a/index.html
+++ b/index.html
@@ -22,3 +22,35 @@
         Fermento.</p>
         
 <button class="btn-proximo" data-proximo="1">tortas</button>
+
+<title>Em busca da cidade perdida</title>
+</head>
+<body>
+    <main>
+        <div class="passo ativo" id="passo-0">
+            <img src="cenario-passo0.png" alt="">
+            <p>bolo e doces</p>
+            <button class="btn-proximo" data-proximo="1">botão do bolo</button>
+            <button class="btn-proximo" data-proximo="2">botão da torta</button>
+        </div>
+        <div class="passo" id="passo-1">
+            <p>Ovos.
+                Manteiga ou margarina.
+                Farinha de trigo.
+                Leite.
+                Maizena.
+                Açúcar.
+                Fermento</p>
+            <button class="btn-proximo" data-proximo="3">mais receita clique aqui</button>
+            <button class="btn-proximo" data-proximo="4">mais receitas clique aqui 2</button>
+        </div>
+        <div class="passo" id="passo-2">
+            <p>Receita da torta</p>
+            <button class="btn-proximo" data-proximo="5">mais tortas clique aqui 1</button>
+            <button class="btn-proximo" data-proximo="6">mais doces clique aqui</button>
+        </div>
+    </main>
+    <script src="script.js"></script>
+</body>
+
+
