--- a/index.html
+++ b/index.html
@@ -52,5 +52,16 @@
     </main>
     <script src="script.js"></script>
 </body>
+<const avanca = document.querySelectorAll("btn-proximo")
+
+></const>avanca.forEach(button => {
+    <button.addEventListener('click', function(){
+        const atual = document.querySelector('.ativo');
+        const proximoPasso = 'passo-' + this.getAttribute('data-proximo');
+
+        atual.classList.remove('ativo');
+        document.getElementById(proximoPasso).classList.add('ativo');
+    })
+
 
 
